PetMotel/petmotelweb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: petmotel-web
  name: petmotel-web
spec:
  replicas: 5
  selector:
    matchLabels:
      app: petmotel-web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: petmotel-web
    spec:
        imagePullSecrets:
          - name: regcred
        containers:
          - image: docker.io/binarybird/petmotelweb
            name: dotnetcoreapp
            imagePullPolicy: Always
            resources: {}
            ports:
              - containerPort: 80
status: {}
