PetMotel/petmotelweb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: petmotel-web
  labels:
    run: petmotel-web
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: petmotel-web
  type: NodePort
